<resources>
    <string name="app_name">EhViewer</string>
    <string name="site_e" translatable="false">e-hentai</string>
    <string name="site_ex" translatable="false">exhentai</string>
    <string name="theme_light">Light Theme</string>
    <string name="theme_dark">Dark Theme</string>
    <string name="theme_black">Black Theme</string>
    <string name="doujinshi" translatable="false">DOUJINSHI</string>
    <string name="manga" translatable="false">MANGA</string>
    <string name="artist_cg" translatable="false">ARTIST CG</string>
    <string name="game_cg" translatable="false">GAME CG</string>
    <string name="western" translatable="false">WESTERN</string>
    <string name="non_h" translatable="false">NON-H</string>
    <string name="image_set" translatable="false">IMAGE SET</string>
    <string name="cosplay" translatable="false">COSPLAY</string>
    <string name="asian_porn" translatable="false">ASIAN PORN</string>
    <string name="misc" translatable="false">MISC</string>
    <string name="homepage">Homepage</string>
    <string name="subscription">Subscription</string>
    <string name="whats_hot">What\'s hot</string>
    <string name="favourite">Favourite</string>
    <string name="history">History</string>
    <string name="downloads">Downloads</string>
    <string name="settings">Settings</string>
    <string name="stub" translatable="false">Stub</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="recaptcha">Recaptcha (Not required)</string>
    <string name="recaptcha_none">Tap here</string>
    <string name="recaptcha_loading">Loading…</string>
    <string name="recaptcha_failure">Failed</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="sign_in_via_webview">Sign in via WebView</string>
    <string name="sign_in_via_cookies">Sign in via cookies</string>
    <string name="display_name_dialog_title">Enter Display Name</string>
    <string name="display_name">Display name</string>
    <string name="display_name_is_empty">Display name is empty</string>
    <string name="sign_in_first">Please sign in first</string>
    <string name="default_display_name">Little Hippo</string>
    <string name="cookie_explain">A cookie is a small piece of data stored in web browser. Google it if you don\'t know what it is or how to get it.\n\nPlease enter special cookies to sign in.</string>
    <string name="text_is_empty">Text is empty</string>
    <string name="waring">Warning</string>
    <string name="wrong_cookie_warning">It seems that the cookies you entered are wrong. You\'d better check them.</string>
    <string name="i_will_check_it">I will check it</string>
    <string name="i_dont_think_so">I don\'t think so</string>
    <string name="found_cookies">Found cookies!</string>
    <string name="invalid_download_location">It seems download location is not available. Please set it in Settings.</string>
    <string name="cellular_network_warning">Connected to cellular networks</string>
    <string name="clipboard_gallery_url_snack_message">There is a gallery url in the clipboard</string>
    <string name="clipboard_gallery_url_snack_action">View</string>
    <string name="error_status_code_400" translatable="false">Bad Request</string>
    <string name="error_status_code_401" translatable="false">Unauthorized</string>
    <string name="error_status_code_402" translatable="false">Payment Required</string>
    <string name="error_status_code_403" translatable="false">Forbidden</string>
    <string name="error_status_code_404" translatable="false">Not Found</string>
    <string name="error_status_code_405" translatable="false">Method Not Allowed</string>
    <string name="error_status_code_406" translatable="false">Not Acceptable</string>
    <string name="error_status_code_407" translatable="false">Proxy Authentication Required</string>
    <string name="error_status_code_408" translatable="false">Request Timeout</string>
    <string name="error_status_code_409" translatable="false">Conflict</string>
    <string name="error_status_code_410" translatable="false">Gone</string>
    <string name="error_status_code_411" translatable="false">Length Required</string>
    <string name="error_status_code_412" translatable="false">Precondition Failed</string>
    <string name="error_status_code_413" translatable="false">Request Entity Too Large</string>
    <string name="error_status_code_414" translatable="false">Request-URI Too Long</string>
    <string name="error_status_code_415" translatable="false">Unsupported Media Type</string>
    <string name="error_status_code_416" translatable="false">Requested Range Not Satisfiable</string>
    <string name="error_status_code_417" translatable="false">Expectation Failed</string>
    <string name="error_status_code_500" translatable="false">Internal Server Error</string>
    <string name="error_status_code_501" translatable="false">Not Implemented</string>
    <string name="error_status_code_502" translatable="false">Bad Gateway</string>
    <string name="error_status_code_503" translatable="false">Service Unavailable</string>
    <string name="error_status_code_504" translatable="false">Gateway Timeout</string>
    <string name="error_status_code_505" translatable="false">HTTP Version Not Supported</string>
    <string name="error_bad_status_code">Bad status code: %d</string>
    <string name="error_timeout">Timeout</string>
    <string name="error_unknown_host">Unknown host</string>
    <string name="error_redirection">Too many redirections</string>
    <string name="error_socket">Network error</string>
    <string name="error_unknown">Weird</string>
    <string name="error_cant_find_activity">Can\'t find the application</string>
    <string name="error_cannot_parse_the_url">Can\'t parse the url</string>
    <string name="error_not_folder_path">Not folder path</string>
    <string name="error_no_provider">No provider</string>
    <string name="error_decoding_failed">Decoding failed</string>
    <string name="error_not_found">Not found</string>
    <string name="error_empty">Empty</string>
    <string name="error_invalid_archive">Invalid archive</string>
    <string name="error_reading_failed">Reading Failed</string>
    <string name="error_out_of_range">Out of range</string>
    <string name="error_write_failed">Write failed</string>
    <string name="error_parse_error">Parse error</string>
    <string name="error_509">509</string>
    <string name="error_invalid_url">Invalid url</string>
    <string name="error_get_ptoken_error">Get pToken error</string>
    <string name="error_cant_create_temp_file">Couldn\'t create temp file</string>
    <string name="error_cant_save_image">Can\'t save image</string>
    <string name="error_invalid_number">Invalid number</string>
    <string name="error_please_login_first">Please login first</string>
    <string name="error_empty_html">Empty page</string>
    <string name="error_cant_get_image">Can\'t get image</string>
    <string name="kokomade_tip">Settings->Eh->Gallery Site->e-hentai</string>
    <string name="app_waring">The content of this application is from the Internet. Some of it may do physical or mental harm to you. You have learnt the risks above and would like to undertake them.</string>
    <string name="error_username_cannot_empty">Username cannot be an empty string</string>
    <string name="error_password_cannot_empty">Password cannot be an empty string</string>
    <string name="skip_signing_in">Continue without signing in</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="sign_in_failed_tip">If this issue continues, try \"Sign in via WebView\" or \"Sign in via cookies\"</string>
    <string name="sign_in_failed_plain">Perhaps it is a mistake due to website update or something wrong happened. You may try sign in via WebView or enter cookie or skip signing in under sign in button. But you may be a "Sad Panda" after skipping signing in. Try "Sign in via cookies" first if you had signed in on 0.6.x version.</string>
    <string name="press_twice_exit">Press twice to exit</string>
    <string name="content_layout_restore_tip">Tap to retry</string>
    <string name="write_rationale">EhViewer will request WRITE_EXTERNAL_STORAGE permission for downloading gallery. Do you want to grant the permission?</string>
    <string name="you_rejected_me">It hurts</string>
    <string name="analytics_explain">Would you mind if the developer collected your device information and your usage? It will help the developer a lot.&lt;br&gt;&lt;br&gt;Data analysis service is provided by Microsoft AppCenter. Its privacy policy can be found at &lt;a href=&quot;https://privacy.microsoft.com/zh-cn/privacystatement&quot;&gt;https://privacy.microsoft.com/zh-cn/privacystatement&lt;/a&gt;.&lt;br&gt;&lt;br&gt;If you agree to join data analysis, your device information and your usage will be collected, including but not limited to Android API version, equipment model, language residence, the application version, conversion time, function times. The developer promise that these information will NOT be collected, including phone number, e-mail address, IMEI.&lt;br&gt;&lt;br&gt;Your information will not be collected until you agree to join data analysis.&lt;br&gt;&lt;br&gt;The collected information will be analyzed by Microsoft AppCenter. The analysis report can only be viewed by the developer of this application.</string>
    <string name="get_it">Got it</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="help_route">Settings->About->Help</string>
    <string name="select_scene">Which gallery site do you want to visit?</string>
    <string name="select_scene_explain">e-hentai: available for anyone\nexhentai: available for who has signed in</string>
    <string name="no_select">Please select one site</string>
    <string name="update">Update</string>
    <string name="update_plain">Version: %1$s\nSize: %2$s\n\n%3$s</string>
    <string name="update_to_date">You are using the latest version of EhViewer.</string>
    <string name="update_ignore">Ignore</string>
    <string name="gallery_list_search_bar_hint_exhentai">Search ExHentai</string>
    <string name="gallery_list_search_bar_hint_e_hentai">Search E-Hentai</string>
    <string name="gallery_list_search_bar_open_gallery">Open the gallery</string>
    <string name="gallery_list_empty_hit">The World is Big and the panda sit alone</string>
    <string name="gallery_list_empty_hit_subscription">Subscribe to tags in Settings->EH->My tags</string>
    <string name="search">Search</string>
    <string name="keyword_search">Keyword search</string>
    <string name="image_search">Image search</string>
    <string name="search_normal">Normal Search</string>
    <string name="search_advance">Advance Options</string>
    <string name="search_image">Image Search</string>
    <string name="search_normal_search">Normal search</string>
    <string name="search_subscription_search">Subscription search</string>
    <string name="search_specify_uploader">Specify uploader</string>
    <string name="settings_eh">EH</string>
    <string name="settings_read">Read</string>
    <string name="settings_download">Download</string>
    <string name="settings_advanced">Advanced</string>
    <string name="settings_about">About</string>
    <string name="settings_about_declaration" translatable="false">EhViewer</string>
    <string name="settings_about_declaration_summary">EhViewer is not affiliated with E-Hentai.org in any way</string>
    <string name="settings_about_author">Author</string>
    <string name="settings_about_telegram">Telegram</string>
    <string name="settings_about_latest_release">Latest release</string>
    <string name="settings_about_source">Source</string>
    <string name="settings_privacy">Privacy</string>
</resources>