<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Hippo Seven
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="eh"
        android:icon="@drawable/v_sad_panda_primary_x24"
        android:title="@string/settings_eh" />

    <Preference
        android:key="read"
        android:icon="@drawable/v_book_open_primary_x24"
        android:title="@string/settings_read" />

    <Preference
        android:key="download"
        android:icon="@drawable/v_download_primary_x24"
        android:title="@string/settings_download" />

    <Preference
        android:key="privacy"
        android:icon="@drawable/v_sec_primary_x24"
        android:title="@string/settings_privacy" />

    <Preference
        android:key="advanced"
        android:icon="@drawable/v_adb_primary_x24"
        android:title="@string/settings_advanced" />

    <Preference
        android:key="about"
        android:icon="@drawable/v_info_primary_x24"
        android:title="@string/settings_about" />
</PreferenceScreen>
