<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Hippo Seven
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="declaration"
        android:summary="@string/settings_about_declaration_summary"
        android:title="@string/settings_about_declaration"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="author"
        android:title="@string/settings_about_author"
        app:iconSpaceReserved="false" />

    <com.hippo.preference.UrlPreference
        android:key="telegram"
        android:title="@string/settings_about_telegram"
        app:enableCopying="true"
        app:iconSpaceReserved="false"
        app:url="https://t.me/+AOIyOaC5iaFmYWVl" />

    <com.hippo.preference.UrlPreference
        android:key="issues"
        android:title="@string/settings_about_issues"
        app:enableCopying="true"
        app:iconSpaceReserved="false"
        app:url="https://github.com/EhViewer-NekoInverter/EhViewer/issues/18" />

    <com.hippo.preference.UrlPreference
        android:key="latest_release"
        android:title="@string/settings_about_latest_release"
        app:enableCopying="true"
        app:iconSpaceReserved="false"
        app:url="https://github.com/EhViewer-NekoInverter/EhViewer/releases" />

    <com.hippo.preference.UrlPreference
        android:key="source"
        android:title="@string/settings_about_source"
        app:enableCopying="true"
        app:iconSpaceReserved="false"
        app:url="https://github.com/EhViewer-NekoInverter/EhViewer" />

    <com.hippo.ehviewer.preference.VersionPreference
        android:key="version"
        app:iconSpaceReserved="false" />

</PreferenceScreen>
